Update logo text and replace hero image; remove contact form section

--- a/main2.html
+++ b/main2.html
@@ -1189,7 +1189,7 @@
     <header id="header">
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo"><i class="fas fa-code"></i> Fynix</a>
+                <a href="#" class="logo">Fynix Digital Solutions</a>
                 
                 <div class="mobile-toggle" id="mobileToggle">
                     <i class="fas fa-bars"></i>
@@ -1223,7 +1223,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="https://images.unsplash.com/photo-1555066931-4365d14bab8c?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Fynix Development">
+                    <img src="images\growtika-9WnjxT1NCoY-unsplash.jpg" alt="Fynix Development">
                 </div>
             </div>
         </div>
@@ -1513,26 +1513,7 @@
                         <a class="social-link facebook" href="https://facebook.com" target="_blank" rel="noopener" title="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a class="social-link gmail" href="mailto:amanahmed2274@gmail.com" title="Gmail"><i class="fas fa-envelope"></i></a>
                         <a class="social-link whatsapp" href="https://wa.me/+923143477711" target="_blank" rel="noopener" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                    </div>
-                </div>
-
-                <div class="contact-right">
-                    <form class="contact-form" id="contactForm" action="#" method="post">
-                        <div style="display:flex;gap:12px;">
-                            <input type="text" name="name" placeholder="Your name" required />
-                            <input type="email" name="email" placeholder="Your email" required />
-                        </div>
-
-                        <input type="text" name="subject" placeholder="Subject" />
-                        <textarea name="message" placeholder="Tell us about your project" required></textarea>
-                        <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;margin-top:12px;">
-                            <button type="submit" class="btn-send">Send Message</button>
-                            <small style="color:var(--gray);">Or email us at <a href="mailto:hello@fynix.com">hello@fynix.com</a></small>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+                    
     </section>
 
     <footer style="padding:40px 0;text-align:center;color:var(--gray);">
