--- a/index.html
+++ b/index.html
@@ -568,6 +568,10 @@
             -webkit-overflow-scrolling: touch; /* smooth scrolling on iOS */
         }
 
+        /* Hide native scrollbar but keep scrolling behavior */
+        .portfolio-slider::-webkit-scrollbar { height: 0; display: none; }
+        .portfolio-slider { scrollbar-width: none; -ms-overflow-style: none; }
+
         .portfolio-track {
             display: flex;
             gap: 30px;
