--- a/index.html
+++ b/index.html
@@ -589,8 +589,9 @@
         /* removed slidePortfolio animation (static/paged portfolio) */
 
         .portfolio-card {
-            min-width: 350px;
-            min-height: 150px;
+            min-width: 280px;
+            max-width: 280px;
+           
             padding: 40px;
             border-radius: 20px;
             border: 1px solid rgba(42, 45, 67, 0.06);
@@ -1462,7 +1463,7 @@
                             </div>
                         </a>
 
-                        <a class="portfolio-link" href="http://stallionrecruitment.com" target="_blank" rel="noopener">
+                        <a class="portfolio-link"  target="_blank" rel="noopener">
                             <div class="portfolio-card">
                                 <div class="portfolio-image">
                                     <img src="images\stallion_template_r1_c1.gif" alt="stallion recruitment">
