--- a/index.html
+++ b/index.html
@@ -556,7 +556,6 @@
         .portfolio-track {
             display: flex;
             gap: 30px;
-            justify-content: center;
         }
     
 
@@ -1016,6 +1015,14 @@
 
             section {
                 padding: 60px 0;
+            }
+
+            .portfolio-track {
+                padding-left: 20px;
+            }
+
+            header {
+                background-color: white;
             }
         }
 
@@ -1545,6 +1552,7 @@
             }
         });
     </script>
+/
 
 </body>
 </html>
